--- a/interface.css
+++ b/interface.css
@@ -1,7 +1,42 @@
 table, th, td {
     border: 1px solid black;
+	margin-top: 20px;
 }
 
 table {
     border-collapse: collapse;
 }
+
+.prompter {
+    position: absolute;
+	margin-top: 20px;
+    left: 300px;
+    width: 300px;
+    border:3px solid #8AC007;
+    padding: 15px;
+	width: 17%;
+	height: 10%;
+}
+
+.prompter2 {
+    position: absolute;
+	margin-top: 150px;
+    left: 300px;
+    width: 300px;
+    border:3px solid #8AC007;
+    padding: 15px;
+	width: 17%;
+	height: 10%;
+}
+
+.winmessenger {
+    position: absolute;
+	margin-top: 300px;
+    left: 300px;
+    width: 300px;
+    border:3px solid #8AC007;
+    padding: 15px;
+	width: 17%;
+	height: 7%;
+}
+
