--- a/interface.css
+++ b/interface.css
@@ -1,3 +1,7 @@
+#navlist {
+	display: inline-block;
+}
+
 table, th, td {
     border: 1px solid black;
 	margin-top: 20px;
@@ -7,10 +11,19 @@ table {
     border-collapse: collapse;
 }
 
+.navigation {
+	margin-top: 0px;
+	display: inline-block;
+}
+
+#versiontracker{
+	margin-left: 90%;
+}
+
 .prompter {
     position: absolute;
 	margin-top: 20px;
-    left: 300px;
+    left: 34%;
     width: 300px;
     border:3px solid #8AC007;
     padding: 15px;
@@ -20,8 +33,8 @@ table {
 
 .prompter2 {
     position: absolute;
-	margin-top: 150px;
-    left: 300px;
+	margin-top: 170px;
+    left: 34%;
     width: 300px;
     border:3px solid #8AC007;
     padding: 15px;
@@ -31,8 +44,8 @@ table {
 
 .winmessenger {
     position: absolute;
-	margin-top: 300px;
-    left: 300px;
+	margin-top: 320px;
+    left: 34%;
     width: 300px;
     border:3px solid #8AC007;
     padding: 15px;
@@ -40,3 +53,36 @@ table {
 	height: 7%;
 }
 
+.currencytracker {
+	margin-left: 1%;
+
+}
+
+.mainbuttons {
+	text-align: center;
+	margin-top: 1%;
+	margin-left: 20%;
+	margin-right: 100px;
+	width: 30%;
+    padding: 20px;
+    border: 5px solid navy;
+	
+}
+
+.scrollable {
+    height: 500px;
+	width: 400px;
+    overflow-y: scroll;
+	margin-left: 10%;
+	position: absolute;
+	display: inline;
+}
+
+.inliner{
+	display: flex;
+}
+
+.loglist {
+	padding-left:5%;
+    list-style-type: square;
+}
